Finished index design

--- a/themes/antares-3/layout/_partial/footer.ejs
+++ b/themes/antares-3/layout/_partial/footer.ejs
@@ -1,9 +1,11 @@
 <footer class="footer" role="contentinfo">
-  <p>&copy; 2019 Housse of Antares</p>
-  <p>Reserbado ang lahat ng karapatan.</p>
-  <a href="#!">Tungkol sa Antares Programming</a>
+  <div>
+    <p>&copy; 2019 Housse of Antares</p>
+    <p>Reserbado ang lahat ng karapatan.</p>
+  </div>
+  <div><a href="#!">Tungkol sa Antares Programming</a>
   <a href="https://www.facebook.com/antaresprogramming"><i>Antares Programming</i> sa Facebook</a>
-  <p id="back-to-top"><a href="#top">Back to top</a></p>
+  <p id="back-to-top"><a href="#top">Back to top</a></p></div>
 </footer>
 <script>
     var CONFIG_ROOT = `<%- config.root %>`;
