--- a/themes/antares-3/layout/_partial/sidebar.ejs
+++ b/themes/antares-3/layout/_partial/sidebar.ejs
@@ -1,7 +1,7 @@
 <aside class="sidebar">
   <section class="author-sidebar">
     <img src="images/francis_rubio.jpg" alt="Photo of Francis Rubio" class="author-photo">
-    <address>by <span class="author-name">Francis Rubio</span></address>
+    <address>by <a href="https://celestialcinnamon.github.io/" class="author-name focusable">Francis Rubio</a></address>
     <p>Freelance Web developer and designer from The Philippines</p>
   </section>
   <% theme.widgets.forEach(function(widget){ %>
