--- a/themes/antares-3/layout/_partial/head.ejs
+++ b/themes/antares-3/layout/_partial/head.ejs
@@ -68,6 +68,7 @@ function renderLinkPaths(pathArray = []) {
   <meta property="og:description" content="<%- strip_html(description) %>" /> 
 
   <%- css('css/literata-book.css') %>
+  <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
   <link href="/antares-blog/css/style.css" rel="stylesheet" media="screen">
   <link href="/antares-blog/css/print.css" rel="stylesheet" media="print">
 
@@ -89,13 +90,9 @@ function renderLinkPaths(pathArray = []) {
   <%- scripts.join("\n") %>
 
   <!-- TODO: Uncomment these links -->
-  <!link
-    href="https://fonts.googleapis.com/css?family=Montserrat:400,700,900&display=swap"
-    rel="stylesheet"
-  />
   <link href="https://fonts.googleapis.com/css?family=Vidaloka&display=swap" rel="stylesheet"> 
-  <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400,400i,700&display=swap" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css?family=B612+Mono&display=swap" rel="stylesheet">
 
   <!--
     HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries
