--- a/themes/antares-3/source/css/style.css
+++ b/themes/antares-3/source/css/style.css
@@ -15,6 +15,17 @@
     outline: none;
 }
 
+:target {
+    animation: target 2s ease-in-out;
+}
+
+@keyframes target {
+    from { 
+        background-color: var(--primary);
+        color: var(--text-on-colored);
+    }
+}
+
 html {
     font-family: "Libre Baskerville", serif;
     font-size: 16px;
@@ -36,6 +47,7 @@ html {
     --accent-orange: #ff5e00;
     --accent-orange-light: #e8a47d;
 
+    --text-on-colored: #111;
     --secondary-color: #aaa;
     --text-color: #ddd;
     --heading-color: #fff;
@@ -44,12 +56,25 @@ html {
 
     --heading-font: "Vidaloka", serif;
     --body-font: "Vidaloka", "Libre Baskerville", serif;
-    --ui-font: "Montserrat", sans-serif;
-    --code-font: "Source Sans Pro", monospace;
+    --ui-font: "Inter", sans-serif;
+    --code-font: "B612 Mono", monospace;
+}
+
+@supports (font-variation-settings: normal) {
+    body {
+        --ui-font: "Inter var", sans-serif;
+    }
+}
+
+pre, code, var, samp, kbd, output {
+    font-family: var(--code-font);
 }
 
 h1, h2, h3,
 h4, h5, h6 {
+    font-family: serif;
+    font-family: var(--heading-font);
+    font-weight: normal;
     line-height: 1.25;
 }
 
@@ -173,6 +198,7 @@ body {
 
     position: sticky;
     top: 0;
+    z-index: 200;
 }
 
 .banner.collapsed {
@@ -259,7 +285,7 @@ body {
     padding: 1rem;
 }
 
-@media (min-width: 350px) {
+@media (min-width: 750px) {
     .post:nth-child(even) {
         margin-left: auto;
         text-align: right;
@@ -292,14 +318,13 @@ body {
     font-family: var(--heading-font);
     border: none;
     letter-spacing: normal;
-    font-size: 3em;
+    font-size: 3rem;
     font-weight: normal;
 
     text-overflow: clip;
-    overflow-wrap: break-word;
 }
 
-@media (min-width: 350px) {
+@media (min-width: 750px) {
     .post__title {
         font-size: 5rem;
     }
@@ -389,12 +414,16 @@ body {
     font-family: var(--ui-font);
 }
 
+.article-tag-list-link:hover,
+.article-category-link:hover,
 .tag-list-link:hover,
 .category-list-link:hover {
     background-color: var(--accent-orange-light);
     color: var(--accent-orange-dark);
 }
 
+.article-tag-list-link:focus,
+.article-category-link:focus,
 .tag-list-link:focus,
 .category-list-link:focus {
     background-color: var(--accent-orange-light);
@@ -405,9 +434,251 @@ body {
 .footer {
     display: flex;
     flex-wrap: wrap;
+    padding: 1rem;
 }
 
 .article-footer > *,
 .footer > * {
     flex: 1;
+}
+
+.footer > div {
+    min-width: 300px;
+}
+
+.post--article {
+    padding: 2rem;
+}
+
+.post--article > p:first-of-type {
+    font-family: var(--ui-font);
+    font-size: 2em;
+    font-weight: 300;
+
+    background-image: linear-gradient(var(--primary), var(--primary));
+    background-position: bottom left;
+    background-repeat: no-repeat;
+    background-size: 30% 0.5rem;
+}
+
+.post--article p {
+    text-indent: 2rem;
+}
+
+.img-wrapper,
+.post--article > p,
+.post--article > ol,
+.post--article > ul,
+.post--article > dl,
+.post--article > table {
+    max-width: 60ch;
+    margin: auto;
+    margin-bottom: 3rem;
+    font-size: 1.2rem;
+    padding-left: 2rem;
+    line-height: 2;
+}
+
+.post--article > dl dt {
+    border-bottom: 1px solid #fff3;
+    margin-top: 2rem;
+    color: var(--heading-color);
+    clear: left;
+}
+
+.post--article > h1,
+.post--article > h2,
+.post--article > h3,
+.post--article > h4,
+.post--article > h5,
+.post--article > h6 {
+    max-width: 60ch;
+    margin: auto;
+    line-height: 1;
+    color: var(--heading-color);
+    font-size: 2.5em;
+    margin: 1em auto;
+}
+
+.post--article > table {
+	border-collapse: collapse;
+	overflow: auto;
+	display: block;
+}
+
+.post--article > table img {
+    min-width: 100px;
+}
+
+.post--article > table td,
+.post--article > table th {
+    border: 1px solid var(--primary-dark);
+    padding: 1rem;
+}
+
+.post--article > table th {
+    background-color: var(--primary);
+    font-family: var(--ui-font);
+    color: #000;
+    font-weight: normal;
+}
+
+.post--article > blockquote {
+    padding: 4rem 0 6rem;
+}
+
+.post--article > blockquote p {
+    font-size: 2rem;
+    line-height: 1.2;
+    font-family: var(--ui-font);
+    font-weight: 300;
+    text-align: center;
+}
+
+.side-note::before, .side-note::after,
+.post--article > blockquote p:first-of-type::before,
+.post--article > blockquote p:first-of-type::after {
+    content: '';
+    display: block;
+    padding: 1px;
+    background-color: #fffa;
+    width: 50%;
+    margin: 2em auto;
+}
+
+.post--article > blockquote .citation {
+    font-family: var(--ui-font);
+    font-style: normal;
+    text-align: center;
+	display: block;
+	margin-top: -4rem;
+}
+.post--article > blockquote .citation::before {
+    content: '―'
+}
+
+.img-wrapper {
+    text-align: center;
+}
+
+.embed-fig,
+.img-wrapper--illustration {
+    max-width: none;
+}
+
+.embed-fig {
+    padding-top: 56.25%;
+    height: 0;
+    overflow: hidden;
+    position: relative;
+}
+
+.youtube-frame {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.youtube-frame,
+.img-wrapper--illustration img {
+    width: 100%;
+}
+
+.img-wrapper video {
+    width: 100%;
+}
+
+.img-wrapper figcaption {
+    font-family: var(--ui-font);
+    font-size: 1rem;
+}
+
+.side-callout,
+.side-note {
+    max-width: 500px;
+    float: right;
+}
+
+@media (min-width: 500px) {
+    .side-callout,
+    .side-note {
+        margin: 2rem;
+    }
+}
+
+.side-callout {
+    float: left;
+    background-color: #fff1;
+    padding: 1rem;
+}
+
+.side-callout header > * {
+    margin: 0;
+}
+
+.side-callout header,
+.side-note dt {
+    font-family: var(--heading-font);
+    color: var(--heading-color);
+    font-size: 2rem;
+    line-height: 1;
+    margin: 0;
+}
+
+.side-callout > div {
+    font-family: var(--ui-font);
+}
+
+.side-callout blockquote {
+    border-left: 4px solid var(--accent-orange);
+    padding: 0 1rem;
+}
+
+.side-note dd {
+    text-indent: 2rem;
+    margin: 2rem;
+    line-height: 2;
+    font-family: var(--ui-font);
+}
+
+.badge {
+    font-size: 1rem;
+    font-family: var(--ui-font);
+    font-weight: 900;
+    background-color: #000;
+    padding: 0.5rem;
+}
+
+.post--article h3 {
+    font-size: 1.9em;
+}
+
+.archive-year-wrap {
+	font-size: 5rem;
+	font-family: var(--ui-font);
+	font-weight: 900;
+    line-height: 1;
+    padding: 1rem;
+}
+
+.archive-year {
+    border: none;
+    color: var(--primary);
+
+}
+
+.archive-article {
+	padding: 2rem;
+}
+
+@media (min-width: 750px) {
+    .archive-article {
+        padding: 5rem;
+    }
+
+    .archive-year {
+        font-size: 7rem;
+    }
 }
