--- a/themes/antares-3/layout/_partial/archive.ejs
+++ b/themes/antares-3/layout/_partial/archive.ejs
@@ -1,3 +1,4 @@
+<% console.log(pagination) %>
 <% if (pagination == 2){ %>
   <% page.posts.each(function(post){ %>
     <%- partial('article', {post: post, index: true}) %>
@@ -7,13 +8,13 @@
   <% page.posts.each(function(post, i){ %>
     <% var year = post.date.year(); %>
     <% if (last != year){ %>
-      <% if (last != null){ %>
-        </div></section>
-      <% } %>
       <% last = year; %>
       <section class="archives-wrap">
         <div class="archive-year-wrap">
-          Mga Post Mula sa <a href="<%- url_for(config.archive_dir + '/' + year) %>" class="archive-year"><%= year %></a>
+          <% if(!is_tag() && !is_category()) { %>
+          Mga Post Mula sa 
+          <% } %>
+          <a href="<%- url_for(config.archive_dir + '/' + year) %>" class="archive-year"><%= year %></a>
         </div>
         <div class="archives">
     <% } %>
