--- a/themes/antares-3/layout/_partial/footer.ejs
+++ b/themes/antares-3/layout/_partial/footer.ejs
@@ -1,9 +1,9 @@
 <footer class="footer" role="contentinfo">
   <div>
-    <p>&copy; 2019 Housse of Antares</p>
+    <p>&copy; 2019 Antares Programming</p>
     <p>Reserbado ang lahat ng karapatan.</p>
   </div>
-  <div><a href="#!">Tungkol sa Antares Programming</a>
+  <div><a href="<%- config.root + theme.menu.About %>">Tungkol sa Antares Programming</a>
   <a href="https://www.facebook.com/antaresprogramming"><i>Antares Programming</i> sa Facebook</a>
   <p id="back-to-top"><a href="#top">Back to top</a></p></div>
 </footer>
