--- a/themes/antares-3/layout/_partial/header.ejs
+++ b/themes/antares-3/layout/_partial/header.ejs
@@ -8,7 +8,7 @@
   <nav class="navbar">
     <ul class="nav-list">
       <li class="nav-item"><a class="nav" href="<%- config.root + theme.menu.Archives %>">Archives</a></li>
-      <li class="nav-item"><a class="nav" href="#!">Downloads</a></li>
+      <li class="nav-item"><a class="nav" href="<%- config.root + theme.menu.Downloads %>">Downloads</a></li>
     </ul>
   </nav>
 </div>
