--- a/themes/antares-3/layout/_partial/header.ejs
+++ b/themes/antares-3/layout/_partial/header.ejs
@@ -2,7 +2,7 @@
   <a href="#main-content" class="nav skiplink sr-only sr-only-focusable">Skip to content</a>
   <header class="header" role="banner">
     <a href="<%- config.root %>" class="site-logo" aria-label="Go to home">
-      <img src="<%- config.root %>images/logo_v4.png" alt="Antares Programming logo">
+      <img src="<%- config.root %>images/favicon-194x194.png" alt="Antares Programming logo" style="align-self: center; height: 64px; width: 64px;">
     </a>
   </header>
   <nav class="navbar">
