--- a/themes/antares-3/source/css/mobile.css
+++ b/themes/antares-3/source/css/mobile.css
@@ -36,12 +36,12 @@
 }
 
 .nav:hover {
-    color: var(--accent-orange-light);
+    color: var(--accent-crimson-light);
 }
 
 .nav:focus {
-    color: var(--background);
-    background-color: var(--accent-green-light);
+    color: var(--heading-color);
+    background-color: var(--accent-blue-light);
 }
 
 .site-logo {
@@ -72,7 +72,7 @@
 }
 
 .site-logo:focus {
-    background-color: var(--accent-green-dark);
+    background-color: var(--accent-blue-dark);
 }
 
 .site-logo:focus img {
@@ -102,13 +102,13 @@
     border: none;
     letter-spacing: normal;
     font-size: 3rem;
-    font-weight: normal;
+    font-weight: bold;
 
     text-overflow: clip;
 }
 
 .post__title:hover {
-    color: var(--accent-orange);
+    color: var(--accent-crimson);
 }
 
 .post__title:focus {
@@ -184,7 +184,7 @@
 .category-list-link,
 .article-category-link {
     border-radius: 5px;
-    background-color: var(--accent-orange-dark);
+    background-color: var(--accent-crimson-dark);
     padding: 0.5rem;
     color: var(--heading-color);
     border: none;
@@ -195,15 +195,15 @@
 .article-category-link:hover,
 .tag-list-link:hover,
 .category-list-link:hover {
-    background-color: var(--accent-orange-light);
-    color: var(--accent-orange-dark);
+    background-color: var(--accent-crimson-light);
+    color: var(--accent-crimson-dark);
 }
 
 .article-tag-list-link:focus,
 .article-category-link:focus,
 .tag-list-link:focus,
 .category-list-link:focus {
-    background-color: var(--accent-orange-light);
+    background-color: var(--accent-crimson-light);
     box-shadow: 0 0 0 5px var(--primary);
 }
 
@@ -228,14 +228,15 @@
 }
 
 .post--article > p:first-of-type {
-    font-family: var(--ui-font);
-    font-size: 2em;
-    font-weight: 300;
-
-    background-image: linear-gradient(var(--primary), var(--primary));
-    background-position: bottom left;
-    background-repeat: no-repeat;
-    background-size: 30% 0.5rem;
+	font-family: "Inter", sans-serif;
+	font-size: 3em;
+	font-weight: 200;
+	background-image: linear-gradient(var(--primary), var(--primary));
+	background-position: bottom left;
+	background-repeat: no-repeat;
+	background-size: 30% 0.5rem;
+	max-width: 80%;
+	padding-bottom: 1em;
 }
 
 .page-content p,
@@ -256,6 +257,10 @@
     font-size: 1.2rem;
     padding-left: 2rem;
     line-height: 2;
+}
+
+.post--article > table {
+    padding-left: 0;
 }
 
 .post--article > dl dt {
@@ -291,9 +296,10 @@
 }
 
 .post--article > table {
-	border-collapse: collapse;
+	/* border-collapse: collapse; */
 	overflow: auto;
-	display: block;
+	width: 100%;
+	background-color: var(--primary-dark);
 }
 
 .post--article > table img {
@@ -302,8 +308,9 @@
 
 .post--article > table td,
 .post--article > table th {
-    border: 1px solid var(--primary-dark);
-    padding: 1rem;
+	/* border: 1px solid var(--primary-dark); */
+	padding: 1rem;
+	background-color: var(--background);
 }
 
 .post--article > table th {
@@ -422,7 +429,7 @@
 }
 
 .side-callout blockquote {
-    border-left: 4px solid var(--accent-orange);
+    border-left: 4px solid var(--accent-crimson);
     padding: 0 1rem;
 }
 
@@ -465,4 +472,9 @@
 
 .page {
     margin: 1rem;
+}
+
+.empty-cell {
+    background: var(--background) !important;
+    border: unset !important;
 }
