--- a/themes/antares-3/layout/_partial/article.ejs
+++ b/themes/antares-3/layout/_partial/article.ejs
@@ -2,7 +2,7 @@
 <article class="post--article">
   <header>
     <h1>
-      <a class="post__title" href="<%- config.root + post.path %>" class="post__title"><%- item.title %></a>
+      <a class="post__title post--focused" href="<%- config.root + post.path %>" class="post__title"><%- item.title %></a>
     </h1>
   </header>
   <%- post.content %>
