Added new features

--- a/themes/antares-3/source/css/baseline.css
+++ b/themes/antares-3/source/css/baseline.css
@@ -27,7 +27,7 @@
 }
 
 html {
-  font-family: "Inter", sans-serif;
+  font-family: "Barlow", sans-serif;
   background-color: #111;
   color: #aaa;
   line-height: 2;
